// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thumbnail/Thumbnail renders with aspectRatio 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  aspect-ratio: 4 / 3;
  background-color: #eeeeee;
  border-radius: 2px;
  box-shadow: inset 0 0 1px rgba(128,128,128,0.5);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 64px;
  place-content: center;
}

.emotion-0 {
  display: block;
  height: 100%;
  object-fit: contain;
  width: 100%;
}

<div
  className="emotion-1"
>
  <img
    className="emotion-0"
    src="https://d95xa459ljwvg.cloudfront.net/theme/weave-logo.svg"
  />
</div>
`;

exports[`thumbnail/Thumbnail renders with fit 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  aspect-ratio: 4 / 3;
  background-color: #eeeeee;
  border-radius: 2px;
  box-shadow: inset 0 0 1px rgba(128,128,128,0.5);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 64px;
  place-content: center;
}

.emotion-0 {
  display: block;
  height: 100%;
  object-fit: cover;
  width: 100%;
}

<div
  className="emotion-1"
>
  <img
    className="emotion-0"
    src="https://d95xa459ljwvg.cloudfront.net/theme/weave-logo.svg"
  />
</div>
`;

exports[`thumbnail/Thumbnail renders with size 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  aspect-ratio: 4 / 3;
  background-color: #eeeeee;
  border-radius: 2px;
  box-shadow: inset 0 0 1px rgba(128,128,128,0.5);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 64px;
  place-content: center;
}

.emotion-0 {
  display: block;
  height: 100%;
  object-fit: contain;
  width: 100%;
}

<div
  className="emotion-1"
>
  <img
    className="emotion-0"
    src="https://d95xa459ljwvg.cloudfront.net/theme/weave-logo.svg"
  />
</div>
`;
